Added hex svg to step template, updated css, changed body color

--- a/docroot/themes/custom/sata/templates/paragraph/paragraph--step--full.html.twig
+++ b/docroot/themes/custom/sata/templates/paragraph/paragraph--step--full.html.twig
@@ -56,9 +56,12 @@
       {{ title_prefix }}
       {% if title_is_set %}
         <div{{ title_inner_attributes.addClass(title_inner_classes) }}>
-          <header{{ title_attributes.addClass(title_classes) }}>
-            {{- title -}}
-          </header>
+          <div class="component-step__title-container">
+            {% include directory ~ '/icons/hexagon.svg' %}
+            <header{{ title_attributes.addClass(title_classes) }}>
+              {{- title -}}
+            </header>
+          </div>
         </div>
       {% endif %}
       {{ title_suffix }}
