--- a/source/themes/custom/sata/styles/base/_base.scss
+++ b/source/themes/custom/sata/styles/base/_base.scss
@@ -21,7 +21,7 @@ html {
 
 body {
   background-color: $body-bg-color;
-  color: $color-black;
+  color: $type-dark;
   font-family: $font-default;
   font-weight: $fw-medium;
   line-height: $body-line-height;
