--- a/source/themes/custom/sata/styles/base/_base.scss
+++ b/source/themes/custom/sata/styles/base/_base.scss
@@ -110,6 +110,13 @@ body:not(.keyboard-activated) *:focus {
   color: $color-blue;
 }
 
+*::selection,
+a::selection,
+a span::selection {
+  background-color: $primary-solar;
+  color: $type-dark;
+}
+
 // height for page wrappers so the site spans the full height of the window
 .dialog-off-canvas-main-canvas,
 .page {
