--- a/source/themes/custom/sata/styles/libraries/paragraph/full--hero-slide.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--hero-slide.scss
@@ -1,7 +1,7 @@
 @charset 'UTF-8';
 
 // -----------------------------------------------------------------------------
-// Libraries/Paragraph: hero slide 
+// Libraries/Paragraph: hero slide
 // -----------------------------------------------------------------------------
 
 /**
@@ -208,12 +208,12 @@
       }
 
       &.component-hero-slide__button-prev {
-        background-image: url('../../../icons/chevron-left.svg');
+        background-image: url('../../../icons/chevron-left-carbon.svg');
         margin-right: 1px;
       }
 
       &.component-hero-slide__button-next {
-        background-image: url('../../../icons/chevron-right.svg');
+        background-image: url('../../../icons/chevron-right-carbon.svg');
         margin-left: 1px;
       }
 
