Updated media page button styling, updated button comment

--- a/source/themes/custom/sata/styles/abstracts/mixins/_button.scss
+++ b/source/themes/custom/sata/styles/abstracts/mixins/_button.scss
@@ -1,7 +1,7 @@
 // -----------------------------------------------------------------------------
 // Abstracts/Mixin: Button Styles
 // Base button style mixin
-// @include btn-base(), @include btn(primary | secondary | light or solar, dark | light | solar, sm | md | lg)
+// @include btn-base(), @include btn(primary | secondary | light | solar, dark | light | solar, sm | md | lg)
 // first param: primary, light, solar are solid colored buttons
 // first param: secondary is a text link with an after icon
 // second param: secondary font color
