--- a/source/themes/custom/sata/styles/abstracts/mixins/_button.scss
+++ b/source/themes/custom/sata/styles/abstracts/mixins/_button.scss
@@ -12,6 +12,7 @@
 @mixin btn-base($style: primary) {
   background-color: $primary-emerald;
   border: 1px solid $primary-emerald !important;
+  border-radius: 2px;
   color: $white;
   display: inline-block;
   font-family: $font-brand !important;
