--- a/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
@@ -15,12 +15,24 @@
  */
 .node--type-product.node--view-mode-teaser {
   width: 25%;
+  box-shadow: 0 0 16px 5px rgba(0, 0, 0, 0.2);
 
   .node__content {
-    border-top: 1px solid $gray-40;
-    border-left: 1px solid $gray-40;
-    border-right: 1px solid $gray-40;
+    border-top: 1px solid transparent;
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
     transition: $transition-base;
+    background-color: $primary-emerald;
+    color: $white;
+
+    a {
+      text-decoration: none;
+      color: $white;
+
+      @include on-event() {
+        color: $white;
+      }
+    }
 
     @include media('<md') {
       border: 0;
@@ -30,15 +42,14 @@
       @include flex();
       @include flex-x(align-items, center);
       @include flex-x(justify-content, center);
-      background-color: $white;
+      background-color: $primary-emerald;
       display: flex;
       overflow: hidden;
-      padding-top: 0;
-      border: 2px solid $primary-emerald;
+      padding: rem(5px 5px 0);
 
       @include media('>md') {
         border: 0;
-        padding-top: 2px;
+        padding: rem(8px 8px 0);
       }
 
       .media {
@@ -61,11 +72,10 @@
     }
 
     .node__content-container {
-      padding: 1rem;
+      padding: rem(10px);
 
-      @include media('<md') {
-        padding-left: 0;
-        padding-right: 0;
+      @include media('>=md') {
+        padding: rem(16px);
       }
     }
 
@@ -77,7 +87,7 @@
       }
 
       .field--name-field-long-description {
-        @include type-header(h4, black, included);
+        @include type-header(h4, light, included);
         margin-top: 0;
 
         @include media('<md') {
@@ -98,7 +108,7 @@
   }
 
   .node__buy-now-button {
-    @include btn(primary);
+    @include btn(solar);
 
     box-sizing: border-box;
     display: inline-block !important;
@@ -116,31 +126,39 @@
 
     &.ps-disabled {
       background-color: $gray-50;
+      border-color: $gray-50 !important;
 
       > small {
-        line-height: 1.625;
-        font-weight: $fw-bold;
+        line-height: rem(24px);
+        font-weight: $fw-extra-bold;
 
         &:hover {
-          font-weight: $fw-bold;
+          font-weight: $fw-extra-bold;
         }
       }
     }
 
     &:hover {
-      color: $primary-emerald;
-      background-color: $black;
+      color: $type-dark;
+      font-weight: $fw-extra-bold;
+      border-left-color: transparent !important;
+      border-right-color: transparent !important;
+      border-bottom-color: transparent !important;
 
-      &.ps-disabled > small {
-        line-height: 1.625;
-        font-weight: $fw-bold;
+      &.ps-disabled {
+        background-color: $gray-50;
+        border-color: $gray-50 !important;
+
+        & > small {
+          line-height: 1.625;
+          font-weight: $fw-extra-bold;
+        }
       }
     }
   }
 
   @include on-event {
-    box-shadow: 0 0 16px 5px rgba(0, 0, 0, 0.2);
-    outline: 2px solid $black;
+    outline: 1px solid $primary-solar;
 
     @include media('<md') {
       box-shadow: none;
