Updated product card button small text hover line height

--- a/source/themes/custom/sata/styles/libraries/node/search-index--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/search-index--product.scss
@@ -149,7 +149,7 @@
         border-color: $gray-50 !important;
 
         & > small {
-          line-height: 1.625;
+          line-height: rem(24px);
           font-weight: $fw-extra-bold;
         }
       }
