--- a/source/themes/custom/sata/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/sata/styles/libraries/node/search-index.scss
@@ -161,7 +161,7 @@
 
   @include on-event {
     box-shadow: 0 0 16px 5px rgba(0, 0, 0, 0.2);
-    outline: 2px solid $black;
+    outline: 1px solid $primary-solar;
 
     @include media('<md') {
       box-shadow: none;
