--- a/source/themes/custom/sata/styles/libraries/node/search-index.scss
+++ b/source/themes/custom/sata/styles/libraries/node/search-index.scss
@@ -106,8 +106,14 @@
     }
 
     .node__long-description {
+      h3 {
+        margin-top: 0;
+      }
+
       .field--name-title {
         @include type-header(h4, light, included);
+        font-size: rem(22px);
+        line-height: rem(26px);
         margin-top: 0;
         text-transform: uppercase;
         -webkit-line-clamp: 3;
@@ -129,21 +135,33 @@
       -webkit-line-clamp: 5;
       -webkit-box-orient: vertical;
       overflow: hidden;
+      font-size: rem(16px);
+      font-weight: $fw-regular;
+      line-height: rem(24px);
+
+      @include media('<md') {
+        font-size: rem(12px);
+        line-height: rem(20px);
+      }
     }
   }
 
   .node__read-more-button {
-    @include btn(secondary, light);
+    @include btn(secondary, light, lg);
 
     box-sizing: border-box;
     float: none;
     font-size: 1rem !important;
-    font-weight: $fw-bold;
+    font-weight: $fw-extra-bold;
     line-height: rem(28px);
     text-align: left;
     transition: $transition-base;
     width: 100%;
-    padding: 1rem;
+    padding: rem(0 16px 16px);
+
+    &::after {
+      margin-left: rem(15px);
+    }
 
     @include on-event() {
       color: $white;
@@ -152,10 +170,14 @@
     @include media('<md') {
       white-space: normal;
       min-width: 100%;
-      padding-left: rem(10px);
-      padding-right: rem(10px);
+      padding: rem(0 10px 16px);
       font-size: rem(14px) !important;
       line-height: rem(22px) !important;
+
+      &::after {
+        font-size: rem(14px);
+        margin-left: rem(5px);
+      }
     }
   }
 
