--- a/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
@@ -114,6 +114,7 @@
     display: inline-block !important;
     float: none;
     font-size: 1rem !important;
+    line-height: rem(24px) !important;
     padding: 1rem 1.75rem .85rem !important;
     transition: $transition-base;
     white-space: inherit !important;
@@ -131,6 +132,7 @@
       > small {
         line-height: rem(24px);
         font-weight: $fw-extra-bold;
+        font-family: $font-brand;
 
         &:hover {
           font-weight: $fw-extra-bold;
