--- a/source/themes/custom/sata/styles/libraries/node/search-index--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/search-index--product.scss
@@ -132,10 +132,6 @@
         line-height: rem(24px);
         font-weight: $fw-extra-bold;
         font-family: $font-brand;
-
-        &:hover {
-          font-weight: $fw-extra-bold;
-        }
       }
     }
 
@@ -153,6 +149,7 @@
         & > small {
           line-height: rem(24px);
           font-weight: $fw-extra-bold;
+          font-family: $font-brand;
         }
       }
     }
