updated teaser products button hover style

--- a/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
+++ b/source/themes/custom/sata/styles/libraries/node/teaser--product.scss
@@ -133,10 +133,6 @@
         line-height: rem(24px);
         font-weight: $fw-extra-bold;
         font-family: $font-brand;
-
-        &:hover {
-          font-weight: $fw-extra-bold;
-        }
       }
     }
 
@@ -154,6 +150,7 @@
         & > small {
           line-height: rem(24px);
           font-weight: $fw-extra-bold;
+          font-family: $font-brand;
         }
       }
     }
