--- a/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
@@ -174,6 +174,16 @@
               </div>
 
               {{ content.field_product_features }}
+
+              {% if content.field_set_components|render|trim|length > 0 %}
+                <div class="product-set-components">
+                  <div class="node--type-product__accordion-content-header">
+                    {{ 'Contains' }}
+                  </div>
+
+                  {{ content.field_set_components }}
+                </div>
+              {% endif %}
             </div>
           </section>
 
