--- a/source/themes/custom/gearwrench/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench/styles/libraries/node/full--product.scss
@@ -441,6 +441,14 @@ $tabs-border-width-active: rem(5px);
                 }
               }
             }
+
+            .product-set-components {
+              margin-top: 4rem;
+
+              .node__sku {
+                text-decoration: underline;
+              }
+            }
           }
         }
       }
