removed extra ; from header variable

--- a/source/themes/custom/sata/styles/abstracts/variables/_header.scss
+++ b/source/themes/custom/sata/styles/abstracts/variables/_header.scss
@@ -10,6 +10,6 @@ $header-logo-performance-height-large: 1.75rem;
 $header-logo-height-mobile: 1.25rem;
 
 $header-height-large: $header-padding + $header-padding + $header-logo-height +  $header-logo-performance-height-large;
-$header-height: $header-padding + $header-padding + $header-logo-height;;
+$header-height: $header-padding + $header-padding + $header-logo-height;
 $header-utility-nav-height: 2.5rem;
 $header-height-mobile: $header-padding-mobile + $header-padding-mobile + $header-logo-height-mobile;
