--- a/source/themes/custom/sata/styles/libraries/block/breadcrumbs.scss
+++ b/source/themes/custom/sata/styles/libraries/block/breadcrumbs.scss
@@ -15,6 +15,7 @@
 
   .breadcrumb li {
     font-size: $body-font-size;
+    font-weight: $fw-regular;
 
     &:nth-child(n+2) {
       &:before {
@@ -23,8 +24,8 @@
     }
 
     a {
-      color: $color-black;
       font-size: $body-font-size;
+      font-weight: $fw-regular;
     }
   }
 
