--- a/docroot/themes/custom/sata/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/sata/templates/node/node--product--full.html.twig
@@ -247,6 +247,10 @@
           <div class="node--type-product-related-products__nav-content">
             <h4>{{ 'Related Products'|t }}</h4>
           </div>
+
+          <div class="node--type-product-related-products__nav-blade">
+            <img src="/{{ directory }}/images/pdp-related-products-blade.png">
+          </div>
         </div>
 
         {{ related_items }}
