bugfix/fix-gw-duplicate-set-output: Remove the duplicate output from GW.

--- a/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/gearwrench/templates/node/node--product--full.html.twig
@@ -237,7 +237,7 @@
         {{ related_items }}
       {% endif %}
 
-      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications',) }}
+      {{ content|without('field_long_description','field_product_images', 'field_product_features', 'field_product_specifications', 'field_set_components') }}
     </div>
   </div>
 </article>
